--- a/preface/index.html
+++ b/preface/index.html
@@ -432,7 +432,7 @@ jQuery(document).ready(function($) {
 					<div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<h4 class="timeline-title">大閤屋開發股份有限公司 / (兼職)外場服務人員</h4>
+							<h4 class="timeline-title">上閤屋 / (兼職)外場服務人員</h4>
 						</div>
 						<div class="timeline-body">
 							<p>
