Update teatop logo

--- a/preface/index.html
+++ b/preface/index.html
@@ -432,7 +432,7 @@ jQuery(document).ready(function($) {
 					<div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<h4 class="timeline-title">上閤屋 / (兼職)外場服務人員</h4>
+							<h4 class="timeline-title">大閤屋開發股份有限公司 / (兼職)外場服務人員</h4>
 						</div>
 						<div class="timeline-body">
 							<p>
@@ -599,7 +599,7 @@ jQuery(document).ready(function($) {
 		<div class="news-grid w3l-agile">
 			<div class="col-md-6 news-img">
 			  <a href="http://www.teatop.com.tw/eorder/login.php" target="_blank">
-			  	<img src="images/teatop.jpg" alt="TeaTop" class="img-responsive">
+			  	<img src="images/teatop.png" alt="TeaTop" class="img-responsive">
 			  </a>
 			</div>
 			<div class="col-md-6 news-text">
