--- a/preface/index.html
+++ b/preface/index.html
@@ -608,7 +608,7 @@ jQuery(document).ready(function($) {
 				幫中部連鎖手搖店【TeaTop】，開發一個電子訂貨系統<br/><br/>
 				
 				【系統功能簡介】<br/>
-				1.公告發布與管理<br/>
+				1.公告發佈與管理<br/>
 				2.分店會員管理<br/>
 				3.貨品資料管理<br/>
 				4.購物車 & 線上訂購<br/>
