--- a/preface/index.html
+++ b/preface/index.html
@@ -203,7 +203,7 @@ jQuery(document).ready(function($) {
 					</div>
 					<div class="col-xs-8 wthree_about_right_grid_right">
 						<h4>作業系統</h4>
-						<p>Windows(XP, 7, 8, 10), Windows Server(2003, 2012), Linux, Android, iOS</p><br/>
+						<p>Windows(XP, 7, 8, 10, 11), Windows Server(2003, 2012), Linux, Android, iOS</p><br/>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -299,18 +299,19 @@ jQuery(document).ready(function($) {
 					<div class="timeline-badge warning"><i class="glyphicon glyphicon-briefcase"></i></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<h4 class="timeline-title">志贖企業有限公司(Rocktouch) / MIS工程師</h4>
+							<h4 class="timeline-title">志贖企業有限公司(Rocktouch) / MIS Manager</h4>
 						</div>
 						<div class="timeline-body">
 							<p>
 							1.系統開發、優化、維護、異常排除<br/>
-							-內部系統開發與維護<br>(文件管理系統、QC檢驗系統、Sales專案管理系統、HR差勤系統、VPD產品資料庫)<br/>
+							-內部系統開發與維護<br>(文件管理系統、QC檢驗系統、Sales專案管理系統、HR差勤系統、產品資料庫、ERP系統報表、報廢系統)<br/>
+							-對外系統維護(架設在Microsoft Azure)<br>
 							-協助開發德國參展Demo系統與安裝測試<br>(Embedded World德國嵌入式電子與工業電腦應用展)<br>
 							-依各單位需求開發系統
 							<br/><br/>
 
 							2.系統管理與維護<br/>
-							-Office 365<br>
+							-Microsoft 365<br>
 							-Wrike<br>
 							-VMware<br>
 							-ERP系統(WorkflowERP、SmartERP)<br>
@@ -320,7 +321,7 @@ jQuery(document).ready(function($) {
 							<br/><br/>
 
 							3.其它<br/>
-							-協助ISO 9001申請<br>
+							-協助ISO 9001申請與維護<br>
 							-電腦(PC、NB)升級作業(更換零件)<br>
 							-網路環境優化(建立Mesh Wifi環境)<br>
 							-建立公司資料備份機制<br>
