--- a/preface/index.html
+++ b/preface/index.html
@@ -134,11 +134,15 @@
 					<div class="about-left-grid">
 						<h2>我是 <span>吳信融</span></h2>
 						<p>
-							曾擔任過田徑隊隊長、文書處理選手並代表學校比賽，也獲得不錯的成績。本身的專長有程式設計、資料庫規劃、網路規劃與文書處理，製作大學專題時，獨自規劃出網站的資料庫並自學PHP撰寫大部分的程式，雖然過程中遇到許多瓶頸，但最後還是順利的一一排除，並完成畢業專題，使自己的能力更上一層樓，同時是該屆專題競賽（媒體組）的第一名。
+							擁有 10 年以上資訊相關工作經驗，專精於 網站與系統開發、MIS 管理、網路架構規劃與維運。<br>
+							秉持「努力不一定會成功，但一定會有所收穫」的精神；
+							抱著「凡事為他人著想，為結果負責」的態度；
+							貫徹「專業，就是用對方聽得懂的話，去告訴他不懂的事情」的理念，致力於讓資訊系統帶來實際效益與效率提升，並解決人們遇到的資訊問題。
+							<!-- 曾擔任過田徑隊隊長、文書處理選手並代表學校比賽，也獲得不錯的成績。本身的專長有程式設計、資料庫規劃、網路規劃與文書處理，製作大學專題時，獨自規劃出網站的資料庫並自學PHP撰寫大部分的程式，雖然過程中遇到許多瓶頸，但最後還是順利的一一排除，並完成畢業專題，使自己的能力更上一層樓，同時是該屆專題競賽（媒體組）的第一名。 -->
 						</p>
 					</div>
 				</div>
-				<div class="item">
+				<!-- <div class="item">
 					<div class="about-left-grid">
 						<h2>我是 <span>吳信融</span></h2>
 						<p>
@@ -156,7 +160,7 @@
 								target="_blank">http://www.inark.feu.edu.tw/</a>），也透過本身SEO能力，使諮商輔導中心想要的關鍵字，能夠在搜尋引擎中，順利的在第一頁出現，同時也根據之前的經驗，給予一些網站經營的技巧與建議。
 						</p>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="col-md-6 about-right">
@@ -246,7 +250,7 @@
 					</div>
 					<div class="col-xs-9 wthree_about_right_grid_right">
 						<h4>資料庫</h4>
-						<p>MySQL, MSSQL, Access</p><br /><br />
+						<p>MySQL, MSSQL, Oracle</p><br /><br />
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -258,7 +262,7 @@
 					</div>
 					<div class="col-xs-9 wthree_about_right_grid_right">
 						<h4>影像處理</h4>
-						<p>PhotoShop, PhotoImpact</p><br />
+						<p>PhotoShop</p><br />
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -270,7 +274,7 @@
 					</div>
 					<div class="col-xs-9 wthree_about_right_grid_right">
 						<h4>其它</h4>
-						<p>威力導演, WordPress, Joomla, VirtualBox, SEO</p><br />
+						<p>中文打字75~100/分, 英文打字50~75/分, 威力導演, draw.io, WordPress, Joomla, VMWare, VirtualBox, SEO</p><br />
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -311,11 +315,11 @@
 							<div class="timeline-body">
 								<p>
 									1.系統開發、優化、維護、異常排除<br />
-									-內部系統開發與維護<br>(文件管理系統、QC檢驗系統、Sales專案管理系統、HR差勤系統、產品資料庫、ERP系統報表、報廢系統)<br />
+									-內部系統開發與維護<br>(文件管理系統、QC檢驗系統、Sales專案管理系統、HR差勤系統、PM產品資料庫、ERP系統報表、報廢系統、倉庫管理系統、製造執行系統、生產排程系統、軟體與檔案下載系統)<br />
 									-對外系統維護(架設在Microsoft Azure)<br>
 									-協助開發德國參展Demo系統與安裝測試<br>(Embedded World德國嵌入式電子與工業電腦應用展)<br>
 									-依各單位需求開發系統與功能<br>
-									-教學文件製作
+									-導入MES系統，並依需求製作MES報表(人員生產工時、生產組成紀錄、機台生產參數記錄表..等)
 									<br /><br />
 
 									2.系統管理與維護<br />
@@ -324,18 +328,19 @@
 									-VMware<br>
 									-ERP系統(WorkflowERP、SmartERP)<br>
 									-NAS(台南、台北、義大利)<br>
-									-Share Tech防火牆<br>
+									-Fortinet / Share Tech防火牆<br>
 									-系統權限管控
 									<br /><br />
 
 									3.其它<br />
-									-員工教育訓練<br>
+									-人員教育訓練<br>
 									-機房設備管理與維護<br>
 									-協助ISO 9001申請與維護<br>
 									-電腦(PC、NB)升級作業(更換零件)<br>
 									-網路環境優化(建立Mesh WiFi環境)<br>
 									-建立公司資料備份機制<br>
 									-台南、台北、義大利公司電腦軟硬體狀況排解
+									-新廠網路規劃
 								</p>
 								<div style="text-align:right;"><a href="#exp" class="goexp">Top</a></div>
 							</div>
@@ -532,14 +537,6 @@
 							<div class="clearfix"></div>
 
 							<div class="col-md-3 team-gd ">
-								<a href="#portfolioModal3" class="portfolio-link b-link-diagonal b-animate-go"
-									data-toggle="modal"><img src="images/license/ITE.jpg" height="" alt=""></a>
-							</div>
-							<div class="col-md-3 team-gd ">
-								<a href="#portfolioModal12" class="portfolio-link b-link-diagonal b-animate-go"
-									data-toggle="modal"><img src="images/license/ISO 9001.jpg" height="" alt=""></a>
-							</div>
-							<div class="col-md-3 team-gd ">
 								<a href="#portfolioModal10" class="portfolio-link b-link-diagonal b-animate-go"
 									data-toggle="modal"><img src="images/license/keyin1.jpg" alt=""></a>
 							</div>
@@ -547,7 +544,14 @@
 								<a href="#portfolioModal11" class="portfolio-link b-link-diagonal b-animate-go"
 									data-toggle="modal"><img src="images/license/keyin2.jpg" alt=""></a>
 							</div>
-
+							<div class="col-md-3 team-gd ">
+								<a href="#portfolioModal3" class="portfolio-link b-link-diagonal b-animate-go"
+									data-toggle="modal"><img src="images/license/ITE.jpg" alt=""></a>
+							</div>
+							<div class="col-md-3 team-gd ">
+								<a href="#portfolioModal12" class="portfolio-link b-link-diagonal b-animate-go"
+									data-toggle="modal"><img src="images/license/ISO 9001.jpg" alt=""></a>
+							</div>
 							<div class="clearfix"></div>
 						</div>
 						<div class="tab-1 resp-tab-content" aria-labelledby="tab_item-1">
